[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/potions/PotionButton.gd" type="Script" id=1]
[ext_resource path="res://assets/images/sheets/16x16_various.png" type="Texture" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="PotionButton" type="Control"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 16, 16 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button"]
modulate = Color( 0.792157, 0.780392, 0.721569, 1 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -3, -3 )
vframes = 15
hframes = 16
frame = 166

[node name="Timer" type="Timer" parent="."]

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_Button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
